--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13"
   },
   "devDependencies": {
